# INCL-automated-theorem-prover

./: Cargo.toml  LICENSE  README.md  book.json  book.json.bak  problems.json
.github/workflows/: ci.yml
benchmark/: .gitignore  Cargo.toml  benchmark.sh  data.csv  random_formulas.txt
benchmark/src/: complexity.rs  csv.rs  main.rs  visualization.rs
docs/graphviz/: .gitignore  10.dot  11.1.dot  11.2.dot  12.1.dot  12.2.dot  13.dot  16.1.dot  16.2.dot  18.1.dot  18.2.dot  19.dot  20.dot  21.dot  22.dot  23.dot  24.1.dot  24.2.dot  24.3.dot  25.1.dot  25.2.dot  26.dot  27.1.dot  27.2.dot  27.3.dot  29.1.dot  29.2.dot  29.3.dot  29.4.dot  29.5.dot  3.dot  30.dot  31.dot  4.dot  8.1.dot  8.2.dot  9.2.dot  A1.dot  A10.dot  A11.dot  (+30 more)
docs/graphviz/first_degree_entailment/: kleene_modal_logic.dot  logic_of_constructible_negation.dot  logic_with_gaps_and_gluts.dot  lukasiewicz_modal_logic.dot  priest_logic_of_paradox.dot  rmingle3_modal_logic.dot
prover/: Cargo.toml
prover/src/: countermodel.rs  countermodel_alt.rs  formula.rs  graph.rs  lib.rs  logic.rs  parser.rs  problem.rs  proof.rs  semantics.rs  tree.rs  utils.rs
prover/src/countermodel/: alternative_algorithm.rs  main_algorithm.rs
prover/src/countermodel/alternative_algorithm/: availability.rs  conjunctive_normal_form.rs  domain_generator.rs  falsum_and_truthful.rs  first_order_formula_converter.rs  graph_generator.rs  graph_validator.rs  modal_formula_converter.rs  sat_solver.rs  static_formulas.rs
prover/src/formula/: collections.rs  constructors.rs  converters.rs  notations.rs  operators.rs  random.rs  to_string.rs
prover/src/formula/converters/: extras_in_world.rs  extras_with_fuzzy_tags.rs  extras_with_is_hidden.rs  extras_with_sign.rs  predicate_arg_instantiation.rs
prover/src/graph/: missing_vertices.rs  to_json.rs
prover/src/logic/: common_modal_logic.rs  conditional_modal_logic.rs  first_degree_entailment.rs  first_order_logic.rs  fuzzy_logic.rs  intuitionistic_logic.rs  logic_rule_result_impl.rs  non_normal_modal_logic.rs  normal_modal_logic.rs  propositional_logic.rs  rule_apply_factory.rs  temporal_modal_logic.rs
prover/src/logic/first_degree_entailment/: generic_biimply_fde_rule.rs  kleene_modal_logic.rs  logic_of_constructible_negation.rs  logic_with_gaps_and_gluts.rs  lukasiewicz_modal_logic.rs  priest_logic_of_paradox.rs  rmingle3_modal_logic.rs
prover/src/logic/first_order_logic/: exists.rs  exists_quantifier_rule.rs  forall.rs  forall_quantifier_rule.rs  helper_quantifier_rules.rs  identity.rs  intuitionistic_quantifier_rules.rs  modal_identity_invariance_rule.rs  modal_logic.rs  naming_and_necessity.rs  predicate_args_with_equivalences.rs  variable_domain_semantics.rs
prover/src/parser/: algorithm.rs  assertions.rs  models.rs  token_types.rs
prover/src/problem/: catalog.rs  json.rs
prover/src/proof/: decomposition_queue.rs  execution_log.rs  initialize.rs  problem_catalog.rs  problem_json.rs
prover/src/semantics/: binary_logic_semantics.rs  binary_semantics.rs  four_valued_logic_semantics.rs  fuzzy_logic_semantics.rs  many_valued_logic_semantics.rs  three_valued_logic_semantics.rs
prover/src/tree/: node.rs  node_factory.rs  path.rs  subtree.rs  to_json.rs  to_string.rs
prover/tests/: test.rs
prover/tests/full_output_test/: input.json  output.txt
prover/tests/timeout_test/: input.json
src/: lib.rs
target-linux/: Cargo.toml
target-linux/src/: main.rs  template.html
target-linux/tests/: test.rs
target-wasm/: .gitignore  Cargo.toml  build.sh
target-wasm/src/: app.js  index.html  lib.rs
target-wasm/tests/: web.rs
tests/: web.rs
