[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.bench]
opt-level = 0

[dependencies]
prover = { path = "../prover" }

# generic Result<> with any error
anyhow = "1.0.79"

# random number generator
rand = "0.8.5"

# CPU instruction counter
count_instructions = "0.1.4"

# RAM allocation counter
allocation-counter = "0.8.1"

# Simple DirectMedia Layer bindings
sdl2 = "0.37.0"

# iter extensions
itertools = "0.13.0"
