[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.bench]
opt-level = 0

[dependencies]
# generic Result<> with any error
anyhow = "1.0.79"

# JSON parser
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

# regex
regex = "1.10.5"

# random number generator
rand = "0.8.5"

# enum utils
strum = "0.26.1"
strum_macros = "0.26.1"

# iter extensions
itertools = "0.13.0"

# String.substring()
substring = "1.4.5"

# convenience instantiation macros
box-macro = "0.2.0"
str-macro = "1.0.0"
maplit2 = "1.0.5"
log = "0.4.22"

# concurrency libraries
crossbeam-channel = "0.5.13"
num_cpus = "1.16.0"

# linear programming
minilp = "0.2.2"
