[package]
name = "target-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"

[dependencies]
prover = { path = "../prover" }

# WASM support libs
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

# generic Result<> with any error
anyhow = "1.0.79"

# JSON parser
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
