[package]
name = "target-wasm"
version = "0.1.0"
edition = "2018"

description = "An automated theorem prover based on Graham Priest's Introduction to Non-Classical Logic"
repository = "https://github.com/andob/INCL-automated-theorem-prover"
license = "Apache-2.0"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies]
prover = { path = "../prover" }

# WASM support libs
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }

# generic Result<> with any error
anyhow = "1.0.79"

# enum utils
strum = "0.26.1"
strum_macros = "0.26.1"

# random number generator
getrandom = { version = "0.2.15", features = ["js"] }

# JSON parser
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
